# agent-ci-dashboard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  test-graphql-run.js  test-graphql.js  vite.config.ts
.cursor/rules/: agent-brain.mdc
.github/pipelines/: deploy.yml  pr.yml
.github/workflows/: ci.yml  deploy-build-backend.yml  deploy-build-frontend.yml  deploy-docker-publish.yml  deploy-gcp.yml  deploy-migrate-db.yml  deploy-pipeline.yml  deploy-smoke-test.yml  deploy-vercel.yml  deploy.yml  pr-pipeline.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs  service.rs
crates/ingestor/: Cargo.toml
crates/ingestor/src/: github.rs  main.rs  materialize.rs  sync.rs  webhook.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
infra/: deploy.sh  setup-gcp.sh  setup-vm.sh  start-tunnels.sh
migrations/: 001_repositories.sql  002_raw_events.sql  003_pull_requests.sql  004_workflow_runs.sql  005_issues.sql  006_releases.sql  007_readmes.sql
proto/insights/v1/: insights_service.proto  types.proto
scripts/: gen-proto.sh
src/: app.css  app.html  hooks.server.ts  sw.ts
src/lib/: grpc.ts
src/lib/server/: push.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
src/routes/api/auth/health/: +server.ts
src/routes/api/issues/: +server.ts
src/routes/api/pulls/: +server.ts
src/routes/api/push/subscribe/: +server.ts
src/routes/api/repo/[name]/history/: +server.ts
src/routes/api/status/: +server.ts
src/routes/api/webhook/github/: +server.ts
src/routes/repo/[name]/: +page.server.ts  +page.svelte
static/: manifest.webmanifest
(+6 files in other folders)
