[package]
name = "insights-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
insights-proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "gzip"] }
tonic-web = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
octocrab = "0.43"
tokio-stream = "0.1"
base64 = "0.22"
anyhow = "1"
